// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Artworks controller GET endpoints getArtwork should respond with status 200 and correct body 1`] = `
{
  "artwork": {
    "__v": Any<Number>,
    "_id": "662e92b5d628570afa5357c3",
    "categories": Any<Array>,
    "collectionName": Any<String>,
    "createdAt": Any<String>,
    "updatedAt": Any<String>,
  },
}
`;

exports[`Artworks controller POST endpoints createArtwork should respond with status 201 and correct body 1`] = `
{
  "__v": Any<Number>,
  "_id": "66ce0bf156199c1b8df5db7d",
  "categories": Any<Array>,
  "collectionName": Any<String>,
  "createdAt": Any<String>,
  "updatedAt": Any<String>,
}
`;
